# Parallel_Collision_Check

./: Cargo.toml  README.md  notes.md
res/: benchmark_1.txt  benchmark_1024.txt  benchmark_16.txt  benchmark_2.txt  benchmark_256.txt  benchmark_4.txt  benchmark_4_4_50.txt  benchmark_4_broad_effect.txt  benchmark_64.txt  benchmark_8.txt  phases_profile  plot.py  plot_survival_ratio.py
src/: lib.rs
src/bvh/: bvh.rs  mod.rs  par_bvh.rs  srl_bvh.rs  structs.rs
src/gjk/: gjk.rs  mod.rs
src/shape/: mod.rs  shape.rs
