[package]
name = "parallel_collision_detection"
version = "0.1.0"
edition = "2024"

[dependencies]
apollo-rust-spatial = { path = "/Users/dylanmac/Documents/apollo-rust/crates/apollo-rust-spatial" }
apollo-rust-lie = { path = "/Users/dylanmac/Documents/apollo-rust/crates/apollo-rust-lie" }
apollo-rust-linalg = { path = "/Users/dylanmac/Documents/apollo-rust/crates/apollo-rust-linalg" }
apollo-rust-algs = { path = "/Users/dylanmac/Documents/apollo-rust/crates/apollo-rust-algs" }
apollo-rust-modules = {path = "/Users/dylanmac/Documents/apollo-rust/crates/apollo-rust-modules"}
apollo-rust-mesh-utils = {path = "/Users/dylanmac/Documents/apollo-rust/crates/apollo-rust-mesh-utils"}
nalgebra = { version = "0.33.0", features = ["rand", "serde-serialize"] }
serde = { version = "1.0.214", features = ["derive"] }
parry3d-f64 = { version = "0.16.1", default-features = false, features = ["dim3", "serde-serialize"] }
rand = "0.8.5"
#bevy = { version = "0.14.0", features = ["dynamic_linking"] }
#bevy_panorbit_camera = "0.19"
#bevy_egui = { version = "0.28.0" }
#bevy_obj = { version = "0.14.0" }
#bevy_mod_outline = { version = "0.8.1" }
rayon = "1.10.0"

[profile.dev]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.dev.package."*"]
opt-level = 3
