[package]
name = "parallel_collision_detection"
version = "0.1.0"
edition = "2024"

[dependencies]
apollo-rust-spatial = { path = "/home/dylan/Documents/apollo-rust/crates/apollo-rust-spatial" }#{ path = "/Users/dylanmac/Documents/apollo-rust/crates/apollo-rust-spatial" }
apollo-rust-lie = { path = "/home/dylan/Documents/apollo-rust/crates/apollo-rust-lie" }#{ path = "/Users/dylanmac/Documents/apollo-rust/crates/apollo-rust-lie" }
apollo-rust-mesh-utils = { path = "//home/dylan/Documents/apollo-rust/crates/apollo-rust-mesh-utils" }#{path = "/Users/dylanmac/Documents/apollo-rust/crates/apollo-rust-mesh-utils"}
parry3d-f64  = { version = "0.16.1", features = ["dim3"] }
rand = "0.8.5"
rayon        = "1.10.0"      # or whatever version you’re on
thread_local = "1.1"



[profile.dev]
opt-level = 3

[profile.release]
lto = false
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.dev.package."*"]
opt-level = 3
